episode/tests/snapshots/snapshots_names__episode_names@The_Quiet_Coast_S05E03_720p_BluRay_x264_RLS_mkv.snap
---
source: tests/snapshots_names.rs
description: The.Quiet.Coast.S05E03.720p.BluRay.x264-RLS.mkv
expression: ep
---
Episode {
    file_name: "The.Quiet.Coast.S05E03.720p.BluRay.x264-RLS.mkv",
    title: Some(
        "The Quiet Coast",
    ),
    season: Some(
        5,
    ),
    episodes: [
        3,
    ],
    kind: Regular,
    version: None,
    part: None,
    release_group: Some(
        "RLS",
    ),
}
